--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-sortablejs": "^6.1.4",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.57.1",
+    "sortablejs": "^1.15.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
